fixed dark mode view height

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -38,6 +38,7 @@ body {
 display: flex;
 justify-content: center;
 flex-wrap: wrap;
+height:100vh;
 
 
 }
